--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="sunday_12_feb">Воскресенье, 12 февраля</string>
     <string name="type_good_morning">Введите \"Доброе утро\" для отключения будильника</string>
     <string name="type_words">Введите словосочетание</string>
+    <string name="hold_to_turn_off">Зажмите и удерживайте кнопки громкости для отключения будильника</string>
 </resources>
