--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,4 +100,9 @@
     <string name="alarm_delays_allowed">alarm_delays_allowed</string>
     <string name="choose_turn_off_type">Выберете способ отключения</string>
     <string name="select_time">Выберете время</string>
+    <string name="notification_before_sleep_channel_name">notification_cannel_name</string>
+    <string name="notifiaction_defore_sleep_channel_description">Пора ложиться спать</string>
+    <string name="notification_before_sleep_channel_id">SUPPLE_CLOCK_GO_SLEEP</string>
+    <string name="go_sleep_message">Пора ложиться спать</string>
+    <string name="go_sleep_ticket">Скоро начнётся период отдыха</string>
 </resources>
